re PR c++/16129 (g++.old-deja/g++.eh/catch[35679]*.C)

PR wrong-code/16129
	* alias.c (get_alias_set): Adjust setting of
	DECL_POINTER_ALIAS_SET for pointers to aggregates.

From-SVN: r83673